<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorBackground">

    <View
        android:id="@+id/activity_add_operation_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="?attr/colorSurface"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/activity_add_operation_explanation"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0"
        android:fitsSystemWindows="true"/>

    <ImageButton
        android:id="@+id/activity_add_operation_return_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/return_button_cd"
        android:src="@drawable/ic_left"
        android:background="@drawable/ripple_circle_transparent"
        android:padding="@dimen/padding2"
        android:layout_marginStart="@dimen/margin2"
        android:layout_marginBottom="@dimen/margin1"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/activity_add_operation_toolbar"
        app:layout_constraintBottom_toBottomOf="@id/activity_add_operation_toolbar"/>

    <TextView
        android:id="@+id/activity_add_operation_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.Headline1"
        android:textColor="?attr/colorOnSurface"
        android:layout_marginBottom="@dimen/margin3"
        android:text="@string/activity_add_operation_title"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/activity_add_operation_toolbar"
        app:layout_constraintBottom_toBottomOf="@id/activity_add_operation_toolbar"/>

    <TextView
        android:id="@+id/activity_add_operation_explanation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin4"
        android:layout_marginBottom="@dimen/margin1"
        android:layout_marginStart="@dimen/margin2"
        android:text="@string/activity_add_operation_explanation"
        android:textAppearance="@style/TextAppearance.Body1"
        android:textColor="?attr/colorOnBackground"
        app:layout_constraintBottom_toTopOf="@id/activity_add_operation_name_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_add_operation_toolbar" />

    <TextView
        android:id="@+id/activity_add_operation_name_label"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textAppearance="@style/TextAppearance.Body1"
        android:textColor="?attr/colorOnBackground"
        android:text="@string/activity_add_operation_name"
        android:gravity="center"
        android:layout_marginStart="@dimen/margin2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/activity_add_operation_name_edittext"
        app:layout_constraintTop_toTopOf="@id/activity_add_operation_name_edittext"
        app:layout_constraintBottom_toBottomOf="@id/activity_add_operation_name_edittext"/>

    <EditText
        android:id="@+id/activity_add_operation_name_edittext"
        android:inputType="textAutoCorrect|textAutoComplete|textCapSentences"
        android:hint="@string/activity_add_operation_name_hint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.Body1"
        android:textColor="?attr/colorOnSurface"
        app:layout_constraintStart_toEndOf="@id/activity_add_operation_name_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_add_operation_explanation"
        app:layout_constraintBottom_toTopOf="@id/activity_add_operation_date_edittext"/>

    <TextView
        android:id="@+id/activity_add_operation_date_label"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textAppearance="@style/TextAppearance.Body1"
        android:textColor="?attr/colorOnBackground"
        android:text="@string/activity_add_operation_date"
        android:gravity="center"
        android:layout_marginStart="@dimen/margin2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/activity_add_operation_date_edittext"
        app:layout_constraintTop_toTopOf="@id/activity_add_operation_date_edittext"
        app:layout_constraintBottom_toBottomOf="@id/activity_add_operation_date_edittext"/>

    <EditText
        android:id="@+id/activity_add_operation_date_edittext"
        android:inputType="textAutoCorrect|textAutoComplete|textCapSentences"
        android:hint="@string/activity_add_operation_date_hint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.Body1"
        android:textColor="?attr/colorOnSurface"
        app:layout_constraintStart_toEndOf="@id/activity_add_operation_date_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_add_operation_name_edittext"
        app:layout_constraintBottom_toTopOf="@id/activity_add_operation_amount_edittext"/>

    <TextView
        android:id="@+id/activity_add_operation_amount_label"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textAppearance="@style/TextAppearance.Body1"
        android:textColor="?attr/colorOnBackground"
        android:text="@string/activity_add_operation_amount"
        android:gravity="center"
        android:layout_marginStart="@dimen/margin2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/activity_add_operation_amount_edittext"
        app:layout_constraintTop_toTopOf="@id/activity_add_operation_amount_edittext"
        app:layout_constraintBottom_toBottomOf="@id/activity_add_operation_amount_edittext"/>

    <EditText
        android:id="@+id/activity_add_operation_amount_edittext"
        android:inputType="textAutoCorrect|textAutoComplete|textCapSentences"
        android:hint="@string/activity_add_operation_amount_hint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.Body1"
        android:textColor="?attr/colorOnSurface"
        app:layout_constraintStart_toEndOf="@id/activity_add_operation_amount_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_add_operation_date_edittext"
        app:layout_constraintBottom_toTopOf="@id/activity_add_operation_description_edittext"/>

    <TextView
        android:id="@+id/activity_add_operation_description_label"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textAppearance="@style/TextAppearance.Body1"
        android:textColor="?attr/colorOnBackground"
        android:text="@string/activity_add_operation_description"
        android:gravity="center"
        android:layout_marginStart="@dimen/margin2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/activity_add_operation_description_edittext"
        app:layout_constraintTop_toTopOf="@id/activity_add_operation_description_edittext"
        app:layout_constraintBottom_toBottomOf="@id/activity_add_operation_description_edittext"/>

    <EditText
        android:id="@+id/activity_add_operation_description_edittext"
        android:inputType="textAutoCorrect|textAutoComplete|textCapSentences"
        android:hint="@string/activity_add_operation_description_hint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.Body1"
        android:textColor="?attr/colorOnSurface"
        app:layout_constraintStart_toEndOf="@id/activity_add_operation_description_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_add_operation_amount_edittext"
        app:layout_constraintBottom_toTopOf="@id/activity_add_operation_category_dropdown"/>

    <TextView
        android:id="@+id/activity_add_operation_category_label"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textAppearance="@style/TextAppearance.Body1"
        android:textColor="?attr/colorOnBackground"
        android:text="@string/activity_add_operation_category"
        android:gravity="center"
        android:layout_marginStart="@dimen/margin2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/activity_add_operation_category_dropdown"
        app:layout_constraintTop_toTopOf="@id/activity_add_operation_category_dropdown"
        app:layout_constraintBottom_toBottomOf="@id/activity_add_operation_category_dropdown"/>


    <Spinner
        android:id="@+id/activity_add_operation_category_dropdown"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toEndOf="@id/activity_add_operation_category_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_add_operation_description_edittext"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>